@@ -339,9 +339,12 @@ mud_connection_view_add_text(MudConnectionView *view, gchar *message, enum MudCo
             break;
     }
 
-    if(view->local_echo)
-        mud_connection_view_feed_text(view, text);
-    mud_connection_view_feed_text(view, "\e[0m");
+    if(!error)
+    {
+        if(view->local_echo)
+            mud_connection_view_feed_text(view, text);
+        mud_connection_view_feed_text(view, "\e[0m");
+    }
 
     g_free(text);
 }
@@ -703,6 +706,12 @@ mud_connection_view_send(MudConnectionView *view, const gchar *data)
                 encoding,
                 local_codeset, 
                 &bytes_read, &bytes_written, &error);
+
+            if(error)
+            {
+                conv_text = NULL;
+                error = NULL;
+            }
 
             // Give plugins first crack at it.
             mud_window_handle_plugins(view->priv->window, view->priv->id,
